Fix iOS scrolling issue
This adds a mobile Safari only rule that takes
the address bar into account when calculating
viewport height. This stops the bottom of our
modals getting cut off.

It also emits events to tell the page class to
fix the body element and stop page scrolling behind
a modal.

Ticket: https://phabricator.wikimedia.org/T380854

--- a/banners/mobile/C24_WMDE_Mobile_DE_11/styles/FullPageBanner.scss
+++ b/banners/mobile/C24_WMDE_Mobile_DE_11/styles/FullPageBanner.scss
@@ -9,6 +9,7 @@
 		top: 0;
 		z-index: 1000;
 		height: 100vh;
+		height: -webkit-fill-available;
 		width: 100vw;
 
 		&-content {
