--- a/banners/mobile/C24_WMDE_Mobile_DE_11/styles/FullPageBannerVar.scss
+++ b/banners/mobile/C24_WMDE_Mobile_DE_11/styles/FullPageBannerVar.scss
@@ -8,6 +8,7 @@
 		top: 0;
 		z-index: 1000;
 		height: 100vh;
+		height: -webkit-fill-available;
 		width: 100vw;
 
 		&-content {
